--- a/pom.xml
+++ b/pom.xml
@@ -2,37 +2,32 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.giis-uniovi</groupId>
-    <artifactId>retorch</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <artifactId>retorch-llm-rp</artifactId>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
 
-    <name>retorch</name>
-    <description>RETORCH: Resource-aware Orchestration of End-to-End Test Cases
+    <name>retorch-llm-rp</name>
+    <description>Replication packages of RETORCH combined with LLMs
     </description>
-    <url>https://github.com/giis-uniovi/retorch</url>
+    <url>https://github.com/giis-uniovi/retorch-llm-rp</url>
     <organization>
         <name>Software Engineering Research Group (GIIS) - University of Oviedo, ES</name>
         <url>http://giis.uniovi.es/</url>
     </organization>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <java.version>21</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <modules>
-        <module>retorch-llm-rp</module>
+        <module>retorch-llm-rp </module>
     </modules>
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.13.2</version>
-                <scope>test</scope>
-            </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
@@ -42,10 +37,7 @@
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-slf4j2-impl</artifactId>
                 <version>2.23.1</version>
-                <!-- <scope>test</scope> Commented to enable logging-->
             </dependency>
-
-
         </dependencies>
     </dependencyManagement>
     <build>
@@ -92,6 +84,10 @@
             <url>https://www.augustocristian.es</url>
         </developer>
         <developer>
+            <name>Jesús Morán</name>
+            <url>http://giis.uniovi.es</url>
+        </developer>
+        <developer>
             <name>Claudio de la Riva</name>
             <url>http://giis.uniovi.es</url>
         </developer>
@@ -103,66 +99,11 @@
     <licenses>
         <license>
             <name>Apache-2.0</name>
-            <url>https://github.com/giis-uniovi/retorch/blob/main/LICENSE</url>
+            <url>https://github.com/giis-uniovi/retorch-llm-rp/blob/main/LICENSE</url>
         </license>
     </licenses>
     <scm>
-        <url>https://github.com/giis-uniovi/retorch</url>
+        <url>https://github.com/giis-uniovi/retorch-llm-rp</url>
     </scm>
 
-    <!-- To publish packages (mvn deploy) a profile must be specified (GitHub for snapshots and maven central for releases) -->
-    <profiles>
-        <profile>
-            <id>publish-github</id>
-            <distributionManagement>
-                <snapshotRepository>
-                    <id>github</id>
-                    <name>GitHub Apache Maven Packages</name>
-                    <url>https://maven.pkg.github.com/giis-uniovi/retorch</url>
-                </snapshotRepository>
-            </distributionManagement>
-        </profile>
-        <profile>
-            <id>publish-maven</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.sonatype.plugins</groupId>
-                        <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>1.7.0</version>
-                        <extensions>true</extensions>
-                        <configuration>
-                            <serverId>ossrh</serverId>
-                            <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
-                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>3.2.4</version>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-            <distributionManagement>
-                <repository>
-                    <id>ossrh</id>
-                    <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-                </repository>
-                <snapshotRepository>
-                    <id>ossrh</id>
-                    <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-                </snapshotRepository>
-            </distributionManagement>
-        </profile>
-    </profiles>
 </project>
