--- a/retorch-llm-rp/pom.xml
+++ b/retorch-llm-rp/pom.xml
@@ -3,18 +3,21 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.github.giis-uniovi</groupId>
-        <artifactId>retorch</artifactId>
-        <version>1.1.1-SNAPSHOT</version>
+        <artifactId>retorch-llm-rp</artifactId>
+        <version>1.0.0</version>
     </parent>
-    <artifactId>retorch-llm-rp</artifactId>
+    <artifactId>retorch-llm-expstudy</artifactId>
     <packaging>jar</packaging>
     <name>retorch-llm-rp</name>
-    <description>Multimodule maven project template, module without dependencies</description>
-    <url>http://github.com/giis-uniovi/samples-giis-template</url>
+    <description>Replication package for 'Exploratory study of the usefulness of LLMs in System testing'</description>
+    <url>https://github.com/giis-uniovi/retorch-llm-rp</url>
     <organization>
         <name>Software Engineering Research Group (GIIS) - University of Oviedo, ES</name>
         <url>http://giis.uniovi.es/</url>
     </organization>
+    <properties>
+        <java.version>21</java.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -23,10 +26,6 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j2-impl</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
@@ -48,14 +47,6 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
             </plugin>
@@ -71,8 +62,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
         </plugins>
