--- a/llm-rp-expstudy/.project
+++ b/llm-rp-expstudy/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>retorch-llm-rp</name>
+	<name>llm-rp-expstudy</name>
 	<comment></comment>
 	<projects>
 	</projects>
